5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1573_1332.log
== SUBMITION (2019-03-11 15:33:03) 
-- CODE:
aresta =5
area = (15//2(3)**15.5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.159138
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = (15//2(3)**15.5)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:04) 
-- CODE:
aresta =5
area = (15//2(3)**15.5)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (15//2(3)**15.5)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:06) 
-- CODE:
aresta =5
area = (15//2(3)**15.5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.206726
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = (15//2(3)**15.5)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:51) 
-- CODE:
aresta =5
area =(3/2*(3)**0.5)
 
print(round(3/2*(3)**0.5, 4))
-- EXECUTION TIME:
0.141128
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:54) 
-- CODE:
aresta =5
area =(3/2*(3)**0.5)
 
print(round(3/2*(3)**0.5, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:57) 
-- CODE:
aresta =5
area =(3/2*(3)**0.5)
 
print(round(3/2*(3)**0.5, 4))
-- EXECUTION TIME:
0.1508
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:52:32) 
-- CODE:
aresta =5
area =(3/2*(3)**0.5*(5)**2
print(round(area,4))
-- EXECUTION TIME:
0.14697
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 3
    print(round(area,4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:52:34) 
-- CODE:
aresta =5
area =(3/2*(3)**0.5*(5)**2
print(round(area,4))
-- ERROR:
File "XXXX", line 3
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:52:53) 
-- CODE:
aresta = 5
area =3/2*(3)**0.5*(5)**2
print(round(area,4))
-- EXECUTION TIME:
0.183518
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
